--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>PlaceMap</title>
+	<script src="jquery-3.5.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
@@ -33,7 +34,8 @@
 		
 		
 		var randomCode = makeid(5);
-		alert(randomCode);
+		$('#room_code').text(randomCode);
+
 	
 		
       // Get WebSocket
