--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		
 		function makeid(length) {
 		   var result           = '';
-		   var characters       = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+		   var characters       = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
 		   var charactersLength = characters.length;
 		   for ( var i = 0; i < length; i++ ) {
 			  result += characters.charAt(Math.floor(Math.random() * charactersLength));
@@ -34,7 +34,7 @@
 		
 		
 		var randomCode = makeid(5);
-		$('#room_code').text(randomCode);
+		$('#room_code').text(randomCode.value);
 
 	
 		
