--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 		
 		
 		var randomCode = makeid(5);
-		alert("heyy");
+		alert("heyy1");
 		$('#room_code').text("hola");
+		alert("heyy2");
 
 	
 		
