--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 		
 		
 		var randomCode = makeid(5);
-		alert("heyy");
-		$('#room_code').text("hola");
-		alert("heyy2");
+		$('#room_code').text(randomCode);
 
 	
 		
