--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
 			  result += characters.charAt(Math.floor(Math.random() * charactersLength));
 		   }
 		   return result;
-		}
-		
-		
+		}		
 		var randomCode = makeid(5);
-		$('#room_code').text(randomCode);
-
-	
+		$('#room_code').text(randomCode);	
 		
       // Get WebSocket
       var socket = io();
@@ -46,7 +42,7 @@
       var output = document.getElementById("output");
 
       // Join a channel
-      var room = "test";
+      var room = roomCode;
       socket.emit("join", room);
 
       // Listen to file input events
