--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       var room = roomCode;
       socket.emit("join", room);
 		
-		alert("the room is: "+io.sockets.adapter.get('roomId'))
+		alert("the room is: ");
+		alert(io.sockets.adapter.get('roomId'));
 
       // Listen to file input events
       document.getElementById("input").addEventListener("change", function (event) {
