--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
       // Join a channel
       var room = roomCode;
+		
+		alert("before");
       socket.emit("join", room);
 		
 		alert("the room is: ");
