--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		var randomCode = makeid(5);
 		$('#room_code').text(randomCode);	
 		
+		
+		alert("evenbefore");
+		
       // Get WebSocket
       var socket = io();
 
