--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       // Get DOM elements
       var input = document.getElementById("input");
       var output = document.getElementById("output");
-alert("before");
+alert("before2");
       // Join a channel
       var room = roomCode;
 		
