--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       // Get DOM elements
       var input = document.getElementById("input");
       var output = document.getElementById("output");
-alert("before2");
+		
       // Join a channel
       var room = roomCode;
 		
-		
+		alert("before");
       socket.emit("join", room);
 		
 		alert("the room is: ");
