--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<p id="room_code"></p>
 	  
 	<input type="text" id="codeinput" value="enter your friend's code here"/> 
-	  
+	  <br/>
     <!-- File input a nd image output -->
     <input type="file" id="input">
     <img src="" id="output">
@@ -76,11 +76,11 @@
 	  // Code for joining session with someone else's code
       document.getElementById("codeinput").addEventListener("change", function (event) {
 		  alert("code entered")
-		  var c = document.getElementById("codeinput").value;
+		  /*var c = document.getElementById("codeinput").value;
 		  alert("code is :");
 		  alert(c);
           socket.emit("join", c);
-          socket.emit("joinedroom", "joinedroom");
+          socket.emit("joinedroom", "joinedroom");*/
       };
 
         // Read file
