--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		var randomCode = makeid(5);
 		$('#room_code').text(randomCode);	
 		
-		
+	alert("hey");	
       // Get WebSocket
       var socket = io();
 
