--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Client Code    -->
     <script type="text/javascript">
-
+alert("hey");
 		//Define random room code
 		
 		function makeid(length) {
@@ -36,7 +36,7 @@
 		var randomCode = makeid(5);
 		$('#room_code').text(randomCode);	
 		
-	alert("hey");	
+	alert("hey2");	
       // Get WebSocket
       var socket = io();
 
