--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	  
 	<input type="text" id="codeinput" value="enter your friend's code here"> 
 	  <br/>
-    <!-- File input a nd image output -->
+    <!-- File input a nd image output
     <input type="file" id="input">
-    <img src="" id="output">
+    <img src="" id="output"> -->
 
     <!-- Client Code    -->
     <script type="text/javascript">
