--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<br/>
 	<p id="room_code"></p>
 	  
-	<!--<input type="text" id="codeinput" value="enter your friend's code here"> -->
+	<input type="text" id="codeinput" value="enter your friend's code here">
 	  <br/>
     <!-- File input a nd image output -->
     <input type="file" id="input">
@@ -72,7 +72,7 @@ alert("hey");
         output.src = image;
       });
 		
-		
+	
 	  // Code for joining session with someone else's code
       document.getElementById("codeinput").addEventListener("change", function (event) {
 		  alert("code entered")
@@ -83,9 +83,6 @@ alert("hey");
           socket.emit("joinedroom", "joinedroom");*/
       };
 
-        // Read file
-        fileReader.readAsDataURL(file);
-      })
 
       socket.on("joinedroom", function (message) {
         alert(message);
