--- a/index.html
+++ b/index.html
@@ -74,19 +74,20 @@ alert("hey");
 		
 	
 	  // Code for joining session with someone else's code
+	/*	
       document.getElementById("codeinput").addEventListener("change", function (event) {
 		  alert("code entered")
-		  /*var c = document.getElementById("codeinput").value;
+		  var c = document.getElementById("codeinput").value;
 		  alert("code is :");
 		  alert(c);
           socket.emit("join", c);
-          socket.emit("joinedroom", "joinedroom");*/
-      })
+          socket.emit("joinedroom", "joinedroom");
+      });
 
       socket.on("joinedroom", function (message) {
         alert(message);
       });
-		
+		*/
     </script>
   </body>
 </html>
