--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
 	  // Code for joining session with someone else's code
 		
       document.getElementById("codeinput").addEventListener("change", function (event) {
-		  alert("code entered")
-		 /* var c = document.getElementById("codeinput").value;
+		  var c = document.getElementById("codeinput").value;
 		  alert("code is :");
 		  alert(c);
-          socket.emit("join", c);
+          /* socket.emit("join", c);
           socket.emit("joinedroom", "joinedroom");*/
       });
 /*
