--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<p id="room_code"></p>
 	  
 	<input type="text" id="codeinput" value="enter your friend's code here">
+	<input type="submit" id="codesubmit" value="submit">
 	  <br/>
     <!-- File input a nd image output -->
     <input type="file" id="input">
@@ -74,7 +75,7 @@
 	
 	  // Code for joining session with someone else's code
 		
-		$('#codeinput').on('submit', function() {
+		$('#codesubmit').on('click', function() {
 			var c = $('#codeinput').val();
 			alert("code is :");
 			alert(c);
