--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       socket.emit("join", room);
 
       // Listen to file input events
-      document.getElementById("input").addEventListener("change", function (event) {
+     /* document.getElementById("input").addEventListener("change", function (event) {
 
         // Prepeare file reader
         var file = event.target.files[0];
@@ -69,7 +69,7 @@
 
       socket.on("image", function (image) {
         output.src = image;
-      });
+      });*/
 		
 	
 	  // Code for joining session with someone else's code
