--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		
 	  socket.on("paintred", function (msg) {
         alert("enter paint red!");
-		  $('#room_code).css("background-color","red");
+		  $('#room_code').css("background-color","red");
 		  alert("paint red!");
       });
 		
