--- a/index.html
+++ b/index.html
@@ -71,18 +71,12 @@
 		  alert(msg);
       });
 		
-	document.addEventListener('visibilitychange', function(ev) {
-	  	var state = document.visibilityState;
-		if(state == "visible") socket.emit("dosomething", "went active");
-		else if (state == "invisible") socket.emit("dosomething", "went unactive");
-	});	
-		
-	/*window.onfocus = function() {
+	$(window).blur(function(){
+		socket.emit("dosomething", "went unactive");	  
+	});
+	$(window).focus(function(){
 		socket.emit("dosomething", "went active");
-	};
-	window.onblur = function() {
-		socket.emit("dosomething", "went unactive");
-	};*/
+	});	
 		
     </script>
   </body>
