--- a/index.html
+++ b/index.html
@@ -19,21 +19,15 @@
   
 	<br/>
 	<p>PLAYERS IN THE ROOM</p> 
-	<br/>
 	<p id="p1">You</p> 
-	<br/>
 	<p id="p2">-</p>
-	<br/>
 	<p id="p3">-</p>
-	<br/>
 	<p id="p4">-</p>
-	<br/>
 	<p id="p5">-</p>
-	<br/>
 	<p id="p6">-</p> 
 	  
 	<br/>
-	<p id="message"></p>   
+	<p>MESSAGE: <span id="message"></span></p>   
 
     <!-- Client Code    -->
     <script type="text/javascript">
