--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
 			var c = $('#codeinput').val();
 			name = $('#name').val();
 			
-			alert(io.sockets.clients(c));
+			var roster = io.sockets.clients('chatroom1');
+        
+			roster.forEach(function(client) {
+				alert('Username: ' + client.nickname);
+			});
 			
 			
 			socket.emit("join", c);
