--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 			$('#message').append("<br/>"+name+", you are now in room "+c);
 		});
 		
-	  socket.on("writemessage", function (msg) {
+	  socket.on("B", function (msg) {
+		  $('#message').append("<br/>"+msg);
+      });
+		
+      socket.on("writemessage", function (msg) {
 		  $('#message').append("<br/>"+msg);
       });
 		
