--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Client Code    -->
     <script type="text/javascript">
 
-		var players = ["You","","","","",""];
+		var players = ["You","-","-","-","-","-"];
 		
 		var nPlayers = 1;
 		
