--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		  players[nPlayers] = msg;
 		  nPlayers++;
 		  
-		  $('#message').append(msg);
+		  $('#message').append("<br/>"+msg);
 		  var c = msg.split("/");
 		  for(var i=0; i<c.length; i++){
 			players[i] = c[i];
