--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-	<p>v1</p>
+	<p>v2</p>
 	<!-- Room code mechanism -->  
 	<div id="logininfo">
 		<p id="introtext">Share this code with your friends:</p>
@@ -75,6 +75,7 @@
 		  nPlayers = msg;
 		  if(activePlayers==1) activePlayers = msg;
 		  $('#playersInTheRoom').text(nPlayers);
+		  $('#activePlayers').text(activePlayers);
       });
 		
 	  socket.on("updateactiveplayers", function (msg) {
