--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src="javascript.js"></script>
 	
+    <script src="/socket.io/socket.io.js"></script>
+	
 	<link rel="shortcut icon" href="img/icon.png" />
 	<link rel="apple-touch-icon" href="img/icon.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="img/icon.png" />
