--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      user-scalable=0' >
 <meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	
-<title>PlaceMap</title>
+<title>PlaceMap0</title>
 	
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
