--- a/old/simple/index.html
+++ b/old/simple/index.html
@@ -13,7 +13,7 @@
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <script src="/socket.io/socket.io.js"></script>
 	  
-	<link rel="stylesheet" href="style.css">
+	<!--<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="reset.css">
 	<script type="text/javascript" src="jquery.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -23,7 +23,7 @@
 	<link rel="apple-touch-icon" href="img/icon.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="img/icon.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="img/icon.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="img/icon.png" />  
+	<link rel="apple-touch-icon" sizes="144x144" href="img/icon.png" /> --> 
 	  
   </head>
   <body>
