--- a/old/simple/index.html
+++ b/old/simple/index.html
@@ -10,7 +10,7 @@
 	  
     <title>PlaceMap_v1.01</title>
 	  
-	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 	  
 	<!--<link rel="stylesheet" href="style.css">
