--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PlaceMap</title>
+	<!--<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name='viewport', 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, 
+     user-scalable=0' >
+	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">-->
+	  
+    <title>PlaceMap_v1.01</title>
+	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+	  
+	<!--<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="reset.css">
+	<script type="text/javascript" src="jquery.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script type="text/javascript" src="javascript.js"></script>
+	
+	<link rel="shortcut icon" href="img/icon.png" />
+	<link rel="apple-touch-icon" href="img/icon.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="img/icon.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="img/icon.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="img/icon.png" /> --> 
+	  
   </head>
   <body>
-	<p>v2</p>
 	<!-- Room code mechanism -->  
 	<div id="logininfo">
 		<p id="introtext">Share this code with your friends:</p>
