--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<!--<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name='viewport', 
      content='width=device-width, initial-scale=1.0, maximum-scale=1.0, 
      user-scalable=0' >
-	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">-->
+	<meta http-equiv="ScreenOrientation" content="autorotate:disabled">
 	  
     <title>PlaceMap_v1.01</title>
 	  
